--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[profile.release]
+lto = true
+debug = false
+target = "wasm32-unknown-unknown"
+
 [dependencies]
 fasthash = "0.4.0"
 js-sys = "0.3.69"
