--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "files": [
     "dist/wasm-hash.js",
-    "dist/wasm-hash-node.cjs"
+    "dist/wasm-hash-node.cjs",
+    "dist/wasm-hash.d.ts"
   ],
   "devDependencies": {
     "@emotion/hash": "^0.9.1",
@@ -21,12 +22,14 @@
     "postbuild:binary": "wasm-opt -Oz target/wasm32-unknown-unknown/release/wasm_hash.wasm -o dist/wasm_hash.wasm",
     "prebuild": "npm run build:binary",
     "build": "rollup -c rollup.config.js",
+    "postbuild": "node -e \"require('fs').copyFileSync('src/hash.d.ts', 'dist/wasm-hash.d.ts')\"",
     "pretest": "npm run build",
     "test": "node --test src/hash.test.js",
     "start": "vite"
   },
   "exports": {
     "node": "./dist/wasm-hash-node.cjs",
-    "import": "./dist/wasm-hash.js"
+    "import": "./dist/wasm-hash.js",
+    "types": "./dist/wasm-hash.d.ts"
   }
 }
