--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vite": "^5.2.8"
   },
   "scripts": {
-    "build:binary": "cargo build --release --target wasm32-unknown-unknown",
+    "build:binary": "cargo build --release",
     "postbuild:binary": "wasm-opt -Oz target/wasm32-unknown-unknown/release/wasm_hash.wasm -o out/wasm_hash.wasm",
     "prebuild:binary": "node -e \"require('fs').mkdirSync('out', { recursive: true })\"",
     "prebuild": "npm run build:binary",
