--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ crate-type = ["cdylib"]
 [profile.release]
 lto = true
 debug = false
+opt-level = 3
 target = "wasm32-unknown-unknown"
+strip = true
