--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wasm-hash-griffel",
   "license": "MIT",
-  "version": "1.2.0",
+  "version": "1.5.0",
   "description": "@emotion/hash implementation in WASM",
   "type": "module",
   "files": [
@@ -18,7 +18,7 @@
     "vite": "^5.2.8"
   },
   "scripts": {
-    "build:binary": "cargo build --release",
+    "build:binary": "cargo build --release --target wasm32-unknown-unknown",
     "postbuild:binary": "wasm-opt -Oz target/wasm32-unknown-unknown/release/wasm_hash.wasm -o out/wasm_hash.wasm",
     "prebuild:binary": "node -e \"require('fs').mkdirSync('out', { recursive: true })\"",
     "prebuild": "npm run build:binary",
